--- a/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.html
+++ b/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.html
@@ -32,19 +32,19 @@
 
 					<img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarAnimacion()"/>
 
-				  <mat-form-field appearance="legacy" class="formId">
+				  <mat-form-field class="formId">
 					<mat-label>ID</mat-label>
 					<input matInput placeholder="ID" type="number" formControlName="id">
 				  </mat-form-field>
 
                   <img class="botonMute" src="./assets/desarrollador/mute.png" [ngClass]="{'muteado':mute}" (click)="mute= !mute"/>
 
-				  <mat-form-field appearance="legacy" class="formNombre">
+				  <mat-form-field class="formNombre">
 					<mat-label>Nombre Animación</mat-label>
 					<input matInput placeholder="Nombre" formControlName="nombre">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDuracionAnimacion">
+				  <mat-form-field class="formDuracionAnimacion">
 					<mat-label>Duración Total</mat-label>
 					<input matInput placeholder="Duración" formControlName="duracion">
 				  </mat-form-field>
@@ -56,77 +56,77 @@
 
 				<img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarSubanimacion()"/>
 
-				  <mat-form-field appearance="legacy" class="formNombreSubanimacion">
+				  <mat-form-field class="formNombreSubanimacion">
 					<mat-label>Nombre Subanimación</mat-label>
 					<input matInput placeholder="Nombre" formControlName="nombre">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formSpriteId">
+				  <mat-form-field class="formSpriteId">
 					<mat-label>Sprite ID</mat-label>
 					<input matInput  type="number" placeholder="Sprite Id" formControlName="sprite_id">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDuracion">
+				  <mat-form-field class="formDuracion">
 					<mat-label>Duración</mat-label>
 					<input matInput placeholder="" formControlName="duracion">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formNumFrames">
+				  <mat-form-field class="formNumFrames">
 					<mat-label>Num Frames</mat-label>
 					<input matInput type="number" placeholder="" formControlName="num_frames">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formFrameRef">
+				  <mat-form-field class="formFrameRef">
 					<mat-label>Frame Ref</mat-label>
 					<input matInput placeholder="Frame Ref" formControlName="frame_ref">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formHue">
+				  <mat-form-field class="formHue">
 					<mat-label>HUE</mat-label>
 					<input matInput type="number" placeholder="" formControlName="hue_filter">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formSepia">
+				  <mat-form-field class="formSepia">
 					<mat-label>Sepia</mat-label>
 					<input matInput type="number" placeholder="" formControlName="sepia">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formBrillo">
+				  <mat-form-field class="formBrillo">
 					<mat-label>Brillo</mat-label>
 					<input matInput type="number" placeholder="" formControlName="brillo">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formSaturation">
+				  <mat-form-field class="formSaturation">
 					<mat-label>Saturación</mat-label>
 					<input matInput type="number" placeholder="" formControlName="saturation">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDelay">
+				  <mat-form-field class="formDelay">
 					<mat-label>Delay</mat-label>
 					<input matInput type="number" placeholder="" formControlName="delay">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formOffsetX">
+				  <mat-form-field class="formOffsetX">
 					<mat-label>OffsetX</mat-label>
 					<input matInput type="number" placeholder="" formControlName="offset_x">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formOffsetY">
+				  <mat-form-field class="formOffsetY">
 					<mat-label>OffsetY</mat-label>
 					<input matInput type="number" placeholder="" formControlName="offset_y">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formRotate">
+				  <mat-form-field class="formRotate">
 					<mat-label>Rotate</mat-label>
 					<input matInput type="number" placeholder="" formControlName="rotate">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formScaleX">
+				  <mat-form-field class="formScaleX">
 					<mat-label>ScaleX</mat-label>
 					<input matInput type="number" placeholder="" formControlName="scaleX">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formScaleY">
+				  <mat-form-field class="formScaleY">
 					<mat-label>ScaleY</mat-label>
 					<input matInput type="number" placeholder="" formControlName="scaleY">
 				  </mat-form-field>
