--- a/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
+++ b/src/app/comun/desarrollador/formBuffComponent/formBuff.component.html
@@ -24,23 +24,23 @@
 
 				<img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarBuff()"/>
 
-				  <mat-form-field appearance="legacy" class="formId">
+				  <mat-form-field class="formId">
 					<mat-label>ID</mat-label>
 					<input matInput placeholder="ID" type="number" formControlName="id">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formNombre">
+				  <mat-form-field class="formNombre">
 					<mat-label>Nombre hechizo</mat-label>
 					<input matInput placeholder="Nombre" formControlName="nombre">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDescripcion">
+				  <mat-form-field class="formDescripcion">
 					<mat-label>Descripción</mat-label>
                     <textarea matInput placeholder="Descripción" formControlName="descripcion"></textarea>
 				  </mat-form-field>
 
                     <div class="selector formObjetivo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Ventaja/Desventaja</mat-label>
                         <mat-select [formControl]="tipo_Buff">
                             <mat-option value="Ventaja">Ventaja</mat-option>
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="selector formTipoDaño">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Tipo Daño</mat-label>
                         <mat-select [formControl]="tipo_dano_Buff">
                             <mat-option value="Físico">Físico</mat-option>
@@ -60,57 +60,57 @@
                     </div>
 
                   <div class="formTriple daño">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Daño</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_t">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AP">
                       </mat-form-field>
                   </div>
 
                   <div class="formTriple heal">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Heal</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_t">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Heal directo" formControlName="heal_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_esc_AP">
                       </mat-form-field>
                   </div>
 
                   <div class="formTriple escudo">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Escudo</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Escudo directo" formControlName="escudo_t">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AP">
                       </mat-form-field>
                   </div>
 
-				  <mat-form-field appearance="legacy" class="formAmenaza">
+				  <mat-form-field class="formAmenaza">
 					<mat-label>Duración</mat-label>
 					<input matInput placeholder="Schema" formControlName="duracion">
 				  </mat-form-field>
@@ -127,17 +127,17 @@
 				  </mat-form-field>
                   -->
 
-				  <mat-form-field appearance="legacy" class="formStatInc">
+				  <mat-form-field class="formStatInc">
 					<mat-label>Stat Inc</mat-label>
 					<input matInput placeholder="Schema" formControlName="stat_inc">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formStatIncInicial">
+				  <mat-form-field class="formStatIncInicial">
 					<mat-label>Stat Inc Inicial</mat-label>
 					<input matInput placeholder="Schema" formControlName="stat_inc_inicial">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formStatIncT">
+				  <mat-form-field class="formStatIncT">
 					<mat-label>Stat Inc T</mat-label>
 					<input matInput placeholder="Schema" formControlName="stat_inc_t">
 				  </mat-form-field>
