--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
@@ -23,28 +23,28 @@
             <form  class="formularioGeneral" [formGroup]="formHechizos">
 
                 <img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarHechizo()"/>
-                  <mat-form-field appearance="legacy" class="formId">
+                  <mat-form-field class="formId">
                     <mat-label>ID</mat-label>
                     <input matInput placeholder="ID" formControlName="id">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formNombre">
+                  <mat-form-field class="formNombre">
                     <mat-label>Nombre hechizo</mat-label>
                     <input matInput placeholder="Nombre" formControlName="nombre">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formDescripcion">
+                  <mat-form-field class="formDescripcion">
                     <mat-label>Descripción</mat-label>
                     <textarea matInput placeholder="Descripción" formControlName="descripcion"></textarea>
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formDistancia">
+                  <mat-form-field class="formDistancia">
                     <mat-label>Distancia</mat-label>
                     <input matInput type="number" min="1" placeholder="" formControlName="distancia">
                   </mat-form-field>
 
                     <div class="selector formObjetivo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Target</mat-label>
                         <mat-select [formControl]="objetivo_Hechizos">
                             <mat-option value="EU">Enemigo Unico</mat-option>
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="selector formTipoDaño">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Tipo Daño</mat-label>
                         <mat-select [formControl]="tipo_dano_Hechizos">
                             <mat-option value="Físico">Físico</mat-option>
@@ -76,77 +76,77 @@
                   -->
 
                   <div class="formTriple daño">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Daño</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_dir">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="daño_esc_AP">
                       </mat-form-field>
                   </div>
 
                   <div class="formTriple heal">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Heal</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_dir">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Heal directo" formControlName="heal_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="heal_esc_AP">
                       </mat-form-field>
                   </div>
 
                   <div class="formTriple escudo">
-                      <mat-form-field appearance="legacy" class="pa">
+                      <mat-form-field class="pa">
                         <mat-label>Escudo</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Escudo directo" formControlName="escudo_dir">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ad">
+                      <mat-form-field class="ad">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AD">
                       </mat-form-field>
 
-                      <mat-form-field appearance="legacy" class="ap">
+                      <mat-form-field class="ap">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" step="0.1" placeholder="Daño directo" formControlName="escudo_esc_AP">
                       </mat-form-field>
                   </div>
 
-                  <mat-form-field appearance="legacy" class="formAmenaza">
+                  <mat-form-field class="formAmenaza">
                     <mat-label>Mod. Amenaza</mat-label>
                     <input matInput type="number" min="0" step="0.1" formControlName="mod_amenaza">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formEnergia">
+                  <mat-form-field class="formEnergia">
                     <mat-label>Energía</mat-label>
                     <input matInput type="number" min="0" formControlName="recurso">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formCooldown">
+                  <mat-form-field class="formCooldown">
                     <mat-label>Cooldown</mat-label>
                     <input matInput type="number" min="0" formControlName="cooldown">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formPoder">
+                  <mat-form-field class="formPoder">
                     <mat-label>Poder</mat-label>
                     <input matInput type="number" min="0" formControlName="poder">
                   </mat-form-field>
 
-                  <mat-form-field appearance="legacy" class="formDuracionEscudo">
+                  <mat-form-field class="formDuracionEscudo">
                     <mat-label>Dur_Escudo</mat-label>
                     <input matInput type="number" min="0" formControlName="duracion_escudo">
                   </mat-form-field>
