--- a/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.html
+++ b/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.html
@@ -42,22 +42,22 @@
 
             <ng-container *ngIf="this.desarrolladorService.tipoObjetoSeleccionado=='Equipo'">
 			<form  id="formularioGeneral" [formGroup]="formEquipo">
-				  <mat-form-field appearance="legacy"  class="formId">
+				  <mat-form-field  class="formId">
 					<mat-label>ID</mat-label>
                     <input matInput disabled value="{{id_Equipo.value}}">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formNombre">
+				  <mat-form-field class="formNombre">
 					<mat-label>Nombre Equipo</mat-label>
 					<input matInput formControlName="nombre">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDescripcion">
+				  <mat-form-field class="formDescripcion">
 					<mat-label>Descripción de Equipo</mat-label>
 					<input matInput formControlName="descripcion">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formNivel">
+				  <mat-form-field class="formNivel">
 					<mat-label>Nivel</mat-label>
                     <input matInput type="number" min="1" formControlName="nivel">
 				  </mat-form-field>
@@ -67,17 +67,17 @@
 
             <ng-container *ngIf="this.desarrolladorService.tipoObjetoSeleccionado=='Consumible'">
 			<form  id="formularioGeneral" [formGroup]="formConsumible">
-				  <mat-form-field appearance="legacy"  class="formId">
+				  <mat-form-field  class="formId">
 					<mat-label>ID</mat-label>
                     <input matInput disabled value="{{id_Consumible.value}}">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formNombre">
+				  <mat-form-field class="formNombre">
 					<mat-label>Nombre Consumible</mat-label>
 					<input matInput formControlName="nombre">
 				  </mat-form-field>
 
-				  <mat-form-field appearance="legacy" class="formDescripcion">
+				  <mat-form-field class="formDescripcion">
 					<mat-label>Descripción de Consumible</mat-label>
 					<input matInput formControlName="descripcion">
 				  </mat-form-field>
@@ -92,7 +92,7 @@
                 <div class="tituloSeccion">Propiedades:</div>
                 <form  class="formularioPropiedadesEquipo" [formGroup]="formPropiedadesEquipo">
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Tipo</mat-label>
                         <mat-select formControlName="tipo">
                             <mat-option value="Ligera">Ligera</mat-option>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Pieza</mat-label>
                         <mat-select formControlName="pieza">
                             <mat-option value="Arco">Arco</mat-option>
@@ -125,7 +125,7 @@
                     </div>
 
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Rareza</mat-label>
                         <mat-select formControlName="rareza">
                             <mat-option value="Común">Común</mat-option>
@@ -152,27 +152,27 @@
 
                 <div class="tituloSeccion">Estadisticas Base:</div>
                 <form  class="formularioEstadisticas" [formGroup]="formEstadisticasEquipo">
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>Armadura</mat-label>
                         <input matInput type="number" min="0" formControlName="armadura">
                       </mat-form-field>
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>Mag. Resist</mat-label>
                         <input matInput type="number" min="0" formControlName="resistencia_magica">
                       </mat-form-field>
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>Vitalidad</mat-label>
                         <input matInput type="number" min="0" formControlName="vitalidad">
                       </mat-form-field>
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>AP</mat-label>
                         <input matInput type="number" min="0" formControlName="AP">
                       </mat-form-field>
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>AD</mat-label>
                         <input matInput type="number" min="0" formControlName="AD">
                       </mat-form-field>
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>Critico</mat-label>
                         <input matInput type="number" min="0" formControlName="critico">
                       </mat-form-field>
@@ -186,7 +186,7 @@
                 <form  class="formularioPropiedadesEquipo" [formGroup]="formPropiedadesConsumible">
 
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Tipo</mat-label>
                         <mat-select formControlName="tipo">
                             <mat-option value="Miscelaneo">Miscelaneo</mat-option>
@@ -195,7 +195,7 @@
                     </div>
 
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Modo</mat-label>
                         <mat-select formControlName="modo">
                             <mat-option value="InMap">InMap</mat-option>
@@ -205,7 +205,7 @@
                     </div>
 
                     <div class="selector campo">
-                      <mat-form-field appearance="legacy">
+                      <mat-form-field>
                         <mat-label>Rareza</mat-label>
                         <mat-select formControlName="rareza">
                             <mat-option value="Común">Común</mat-option>
@@ -217,7 +217,7 @@
                       </mat-form-field>
                     </div>
 
-                      <mat-form-field appearance="legacy"  class="campo">
+                      <mat-form-field  class="campo">
                         <mat-label>Max Stack</mat-label>
                         <input matInput type="number" min="1" formControlName="max_stack">
                       </mat-form-field>
