--- a/src/app/comun/atributo/atributo.component.sass
+++ b/src/app/comun/atributo/atributo.component.sass
@@ -2,7 +2,7 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
-::ng-deep .contenedorAtributo
+//::ng-deep .contenedorAtributo
 
 .contenedorAtributo
     position: absolute
@@ -26,11 +26,11 @@
 
     .frameAtributo
         position: absolute
-        top: 0 
-        left: 0 
+        top: 0
+        left: 0
         width: 100%
         height: 100%
         background-image: url("../../../assets/Frames/Frame-atributo.png")
-        background-size: 100% 100% 
+        background-size: 100% 100%
 
 
